[metadata]
name = asyncio_application
version = 1.0
author = Mukul Majmudar
author_email = mukul.majmudar@gmail.com
description = Clean startup and shutdown for asyncio-based applications.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mukulmajmudar/asyncio_application
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.7
package_dir =
    = src
packages = find:

[options.packages.find]
where = src
